--- a/css/src/_area.scss
+++ b/css/src/_area.scss
@@ -247,19 +247,18 @@
 
 .area-legend {
 	margin: 0 -20px;
+	border: 8px solid $grey-light;
+	padding: 20px;
 
 	@include respond-to( 768px ) {
 		margin: 20px 0;
+		width: 100%;
+		padding: 30px;
+		display: flex;
 	}
 
-	dl {
-		border: 8px solid $grey-light;
-		padding: 20px;
-		@include clearfix;
-
-		@include respond-to( 768px ) {
-			padding: 40px;
-		}
+	@include respond-to( 1220px ) {
+		padding: 40px;
 	}
 
 	.term {
@@ -276,6 +275,14 @@
 	}
 
 	.mini-legend {
+		p {
+			padding: 0;
+		}
+
+		@include respond-to( 768px ) {
+			flex-basis: 75%;
+		}
+
 		.item {
 			display: inline-block;
 			white-space: nowrap;
@@ -284,21 +291,24 @@
 	}
 
 	.area-filter {
+		padding-right: 20px;
+
+		@include respond-to( 768px ) {
+			flex-basis: 25%;			
+		}
+
 		select {
+			@include font;
 			width: 100%;
 			margin-bottom: 20px;
+			padding: 10px 15px;
+			border: 2px solid $grey;
 		}
 
 		@include respond-to( 1024px ) {
 			float: left;
 			width: 25%;
 			padding-right: 30px;
-		}
-
-		select {
-			@include font;
-			padding: 10px 15px;
-			border: 2px solid $grey;
 		}
 	}
 }
